--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  background-color: bisque;
+  height: 100vh;
+}
+.parent {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+}
+h1{
+  margin: 50px;
+  color: rgb(1, 117, 248);
+  font-family: 'Oswald', sans-serif;
 }
